--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "validator": "^13.7.0"
   },
   "devDependencies": {
+    "@openzeppelin/hardhat-upgrades": "^1.16.1",
     "@types/node": "^8.10.38",
     "@types/validator": "^13.1.3",
     "@typescript-eslint/eslint-plugin": "^4.24.0",
