--- a/sample/package.json
+++ b/sample/package.json
@@ -9,6 +9,7 @@
     "deploy": "yarn hardhat deploy"
   },
   "devDependencies": {
+    "@openzeppelin/contracts-upgradeable": "^4.5.2",
     "@types/chai": "^4.2.18",
     "@types/mocha": "^8.2.2",
     "@types/node": "^15.6.1",
