--- a/sample/package.json
+++ b/sample/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^4.0.0",
     "@openzeppelin/contracts-upgradeable": "^4.9.5",
+    "@openzeppelin/hardhat-upgrades": "^3.0.4",
     "hardhat": "^2.19.5",
     "hardhat-multibaas-plugin": "./.."
   }
