[#214] improve sample project (#279)
* big refresh of the sample project to serve as a more practical example of plugin usage

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,14 @@ dist
 *cache
 *artifacts
 
+# TypeChain files
+*typechain
+*typechain-types
+
+# Coverage files
+*coverage
+coverage.json
+
 # log/debug files
 *log
 
@@ -15,3 +23,7 @@ env
 
 # OpenZeppelin proxy files
 .openzeppelin
+
+# Config files
+deployment-config.*.js
+!deployment-config.template.js
