[Noissue] switch to npm, update husky, improve linting (#308)

--- a/package.json
+++ b/package.json
@@ -11,18 +11,8 @@
     "ethereum"
   ],
   "lint-staged": {
-    "*.{json}": [
-      "yarn prettier --write"
-    ],
-    "*.{js,ts}": [
-      "yarn prettier --write",
-      "yarn eslint --fix"
-    ]
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
+    "*.{js,ts}": "eslint --fix",
+    "*.json": "prettier --write"
   },
   "description": "A helper plugin for integrating MultiBaas into Hardhat",
   "author": "Curvegrid",
@@ -32,10 +22,9 @@
   ],
   "license": "MIT",
   "scripts": {
+    "prepare": "husky",
     "build": "tsc --build",
-    "lint": "yarn eslint . --ext .ts",
-    "lint:fixAll": "yarn lint --fix",
-    "format": "yarn prettier \"**/*.{js,ts,md,json,yml}\" --write --ignore-path .gitignore"
+    "fix": "eslint --fix '{*,**/*}.{js,ts}'"
   },
   "dependencies": {
     "@nomicfoundation/hardhat-ethers": "^3.0.5",
@@ -54,6 +43,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-prettier": "^5.1.3",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.2",
     "prettier": "^3.2.5",
