--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hardhat-multibaas-plugin",
-  "version": "0.3.3",
+  "version": "0.3.4",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "keywords": [
@@ -35,6 +35,7 @@
     "validator": "^13.12.0"
   },
   "devDependencies": {
+    "@types/fs-extra": "^11.0.4",
     "@types/node": "^20.14.1",
     "@types/validator": "^13.11.10",
     "@typescript-eslint/eslint-plugin": "^7.11.0",
@@ -44,6 +45,7 @@
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prettier": "^5.1.3",
+    "fs-extra": "^11.2.0",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.5",
     "prettier": "^3.3.0",
