--- a/package.json
+++ b/package.json
@@ -52,5 +52,10 @@
     "prettier": "^3.3.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4"
+  },
+  "overrides": {
+    "@openzeppelin/hardhat-upgrades": {
+      "@openzeppelin/upgrades-core": "1.34.1"
+    }
   }
 }
